# groke

./: .gitignore  baseline_evaluator.py  batch.py  bullshit.txt  data_manager.py  errors_analysis.txt  eval.py  first_agent.py  interpret.py  main.py  multi_format_agent.py  poi_analysis.py  presentation_sample.json  process_results.py  prompts.py  pyproject.toml  readme.md  requirements.txt  results.txt  script.temp.py  second_agent.py  second_agent_checker.py  step_generator.py  templates.py  test.py  test_blue.py  test_seen_divider.json  test_seen_high.json  test_seen_json.json  test_seen_low.json  usage_metadata_anal.py
ablation_study/: navigation_instructions.jsonl  step10_grid.jsonl  step10_json.jsonl  step10_textual.jsonl  step1_json.jsonl  step1_textual.jsonl  step2_graph_vis.jsonl  step2_grid.jsonl  step2_json.jsonl  step3_grid.jsonl  step3_json.jsonl  step3_textual.jsonl  step4_graph_vis.jsonl  step4_textual.jsonl  step5_graph_vis.jsonl  step5_textual.jsonl  step6_grid.jsonl  step6_json.jsonl  step6_textual.jsonl  step7_grid.jsonl  step7_textual.jsonl  step8_grid.jsonl  step9_grid.jsonl  step9_json.jsonl
ablation_study_divider/: step4_json.jsonl  step5_json.jsonl  step6_json.jsonl  step7_json.jsonl  step8_json.jsonl  step9_json.jsonl
ablation_study_high/: step1_json.jsonl  step4_json.jsonl  step5_json.jsonl  step6_json.jsonl  step7_json.jsonl  step8_json.jsonl  step9_json.jsonl
ablation_study_json/: step10_json.jsonl  step4_json.jsonl  step6_json.jsonl  step7_json.jsonl  step8_json.jsonl
ablation_study_low/: step3_json.jsonl  step6_json.jsonl  (+1 more)
(+191 files in other folders)
